Find returns multiple variants if moex returns multiple
